Fixed padding of main body to not overlap with header.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,6 +8,7 @@ $heading-font: 'ministry';
 $heading-font-color: #000000;
 $light: #E7EDF4;
 $header:  #000000;
+$header-height: 90px;
 
 *,
 *::before,
